css/dev.css
/* Color Codes

LightBlue: #61dafb
bDark: #20232a
bMedium: #282c34
bLight: #32363e */




body {
  background-color: #282c34;
  overflow-x: hidden !important;
  width: 100vw !important;
}


/* Hollow Shapes to use for Animation */
.circle {
  -moz-border-radius: 100px/100px;
  -webkit-border-radius: 100px 100px;
  border-radius: 200px/200px;
  border: solid 21px#32363e;
  width: 400px;
  height: 400px;
  position: absolute;
  top: 10%;
  right: -40%;
}

.square {
  border: solid 30px #32363e;
  border-radius: 25px;
  width: 250px;
  height: 250px;
  position: absolute;
  top: 65%;
  left: -35%;
}

.inside {
  position: fixed;
  z-index: 1;
}

.triangle-svg {
  position: absolute;
  top: 60%;
  left: -35%;
}
.triangle {
  fill: transparent;
  stroke: #32363e;
  stroke-width: 20;
}

/* Home Section */
.home {
  background-color: #282c34;
  width: 99vw !important;
  height:100vh;
  overflow-x: hidden !important;
}

.flex {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding-bottom: 7%;
  overflow-x: hidden !important;
}

.large-text {
  font-size: 4rem;
}
.medium-text {
  font-size: 3rem;
}
.small-text {
  font-size: 1.6rem;
}

.header-font {
  font-family: muli, sans-serif;
  font-weight: 400;
  font-style: normal;
}
.header-font-bold {
  font-family: muli, sans-serif;
  font-weight: 700;
  font-style: normal;
}
.default-font {
  font-family: 'Poppins', sans-serif;
}
.design-font {
  font-family: 'Righteous', cursive;
}
.coding-font {
  font-family: 'Source Code Pro', monospace;
}
.bg-image {
  position: absolute;
  width: 99vw;
  height:100vh;
}

.circle-skill {
  margin: 0 auto;
  height: 150px;
  width: 150px;
  display: table-cell;
  text-align: center;
  vertical-align: middle;
  border-radius: 20%;
  background: #282c34;
}





.container-navbar-inner {
  padding: 0 5%;
}

/* Main Section CSS */
.intro {
  position: relative;
  padding-top: 2%;
  padding-bottom: 3%;
  padding-left: 10%;
  padding-right: 10%;
  background-color: white;
  z-index: 2;
}
.rect {
  border-top: 3px solid #000000;
  width: 5%;
  margin: auto;
}
.rect-blue {
  border-top: 3px solid #61DAFB;
  width: 5%;
  margin: auto;
}
.inbetween {
  display: flex;
  padding-top: 3%;
  justify-content: center;
  align-items: center;
}

.skills {
  padding-top: 3%;
  padding-bottom: 3%;
  padding-left: 10%;
  padding-right: 10%;
  background-color: rgb(240, 240, 240);
  position: relative;
  z-index: 2;
}

/* Text Colors */
.blue-color {
  color: #61DAFB;
}
.white-color {
  color: white;
}
.grey-color {
  color: #565D68;
}
.black-color {
  color: black;
}
.shadow {
  text-shadow: 2px 2px 10px #000000;
}


/* Contact Section */
.contact {
  padding: 3% 5%;
}
.container-socials {
  display: flex;
  justify-content: center;
  padding-top: 1%;
  padding-bottom: 2%;
}
.btn-link {
  color: grey;
}

.btn-link:hover {
  color: #61DAFB;
}


.centered {
  text-align: center;
}

.block {
  display: block;
  margin: auto;
}
.button {
  text-decoration: none;
  color:white;
}
.button:hover {
  color:#565D68;
}

.pfp {
  display: block;
  border-radius: 30%;
  width: 55%;
  margin: auto;
}
.skill {
  color: #565D68;
  font-size: 1.6rem;
  text-align: center;
  background-color: transparent;
  transition: background-color 0.5s ease-in-out;
  -moz-transition: background-color 0.5s ease-in-out;
  -webkit-transition: background-color 0.5s ease-in-out;
}
.skill:hover {
  background-color: #61DAFB;
  transition: background-color 0.5s ease-in-out;
  -moz-transition: background-color 0.5s ease-in-out;
  -webkit-transition: background-color 0.5s ease-in-out;
}


/* Portfolio CSS */
.container-portfolio {
  padding: 2% 5%;
  background-color: white;
}
.project-padding {
  padding-top: 4%;
  padding-bottom: 2%;
}
.flex-header {
  display: flex;
  justify-content: center;
  align-items: center;
}
.portfolio {
  display: block;
  width: 80%;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  border: 5px solid #20232a;
  opacity: 1.0;
  transition: opacity .55s ease-in-out;
  -moz-transition: opacity .55s ease-in-out;
  -webkit-transition: opacity .55s ease-in-out;
}
.port-title {
  opacity: 0;
  transition: opacity .55s ease-in-out;
  -moz-transition: opacity .55s ease-in-out;
  -webkit-transition: opacity .55s ease-in-out;
}
.portfolio:hover {
  opacity: 0.1;
  transition: opacity 1s ease-in-out;
  -moz-transition: opacity 1s ease-in-out;
  -webkit-transition: opacity 1s ease-in-out;
}
.port-item:hover + .port-title {
  opacity: 1.0;
  transition: opacity 1s ease-in-out;
  -moz-transition: opacity 1s ease-in-out;
  -webkit-transition: opacity 1s ease-in-out;
}


.port-text {
  position: absolute;
  text-align: left;
  top: 70%;
  left: 12%;
}

.pfp-box {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}


/* Skill Cloud CSS */
.skill-cloud-development {
  font-family: muli, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2.5rem;
  color: #20232a;
  display: table;
  margin: 0 auto;
}
.skill-cloud-design {
  font-family: muli, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2.5rem;
  color: #20232a;
  display: table;
  margin: 0 auto;
}
.home-cloud-bg {
  font-family: muli, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 10rem;
  color: #32363e;
  display: table;
  margin: 0 auto;
}

.home-cloud-div {
  position: fixed;
  z-index: 1;
}

.tagcloud--item:hover {
  cursor: default;
  color: #61DAFB;

}

.centered-div {
  display: flex;
  justify-content: center;
  align-items: center;
}

